[package]
name = "keyboard-typer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
tokio = { version = "1.43", features = ["rt-multi-thread"]}
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"]}
